# cor_profiler_rs

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
ILRewriter/: ILRewriter.sln  ILRewriter.vcxproj  cor_helpers.cpp  cor_helpers.h  ilrewriter.cpp  ilrewriter_wrapper.cpp  ilrewriter_wrapper.h  sigparse_wrapper.h
NativeWrapper/: Native.vcxproj  NativeWrapper.sln  cor_helpers.cpp  cor_helpers.h  ilrewriter.h  ilrewriter_wrapper.cpp  ilrewriter_wrapper.h  sigparse_wrapper.cpp
cor_profiler/: Cargo.toml  run_tests.ps1
cor_profiler/src/: cor_helpers.rs  cor_profiler.rs  data_container.rs  guids.rs  hooks_loader.rs  il_rewriter.rs  interfaces.rs  lib.rs  metadata_helpers.rs  opcodes.rs  sig_parser.rs  tests.rs  types.rs  utils.rs
cor_profiler/src/interfaces/: i_clr_meta_host.rs  i_clr_runtime_host.rs  i_clr_runtime_info.rs  i_cor_profiler_callback.rs  i_cor_profiler_info.rs  i_meta_data_assembly_import.rs  i_meta_data_dispenser.rs  i_meta_data_emit.rs  i_meta_data_import.rs
cor_profiler/src/tests/: clr_helpers_tests.rs  common.rs  metadata_helpers_tests.rs
examples/: build_example.ps1  run_example.ps1
examples/SampleLibrary/: SampleLibrary.sln
examples/SampleLibrary/SampleLibrary/: Class1.cs
examples/SampleLibrary/SampleProgram/: Program.cs  SampleProgram.csproj
examples/http_client_hook/: hooks.yaml  run.bat
src/: cor_profiler.rs  guids.rs  il_rewriter.rs  lib.rs  metadata_helpers.rs  opcodes.rs  types.rs
src/interfaces/: i_cor_profiler_info.rs  i_meta_data_assembly_emit.rs  i_meta_data_emit.rs  i_meta_data_import.rs
(+4 files in other folders)
