[package]
name = "cor_prof"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
widestring = "0.4.2"
winapi = { version = "0.3.8", features = ["basetsd", "ntdef", "minwindef", "guiddef"] }
com = "0.2.0"
num-derive = "0.3"
num-traits = "0.2.12"
serde = { version = "1.0" }
serde_yaml = "0.8.13"
yaml-rust = "0.4.4"